<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ouroborous.references</groupId>
    <artifactId>references</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.encoding>UTF-8</maven.encoding>
        <surefire.fork.count>5</surefire.fork.count>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>${maven.encoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <encoding>${maven.encoding}</encoding>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <forkCount>7</forkCount>
                    <reuseForks>false</reuseForks>
                </configuration>
                <!--<dependencies>-->
                    <!--<dependency>-->
                        <!--<groupId>org.apache.maven.surefire</groupId>-->
                        <!--<artifactId>surefire-junit4</artifactId>-->
                        <!--<version>2.17</version>-->
                    <!--</dependency>-->
                <!--</dependencies>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>acceptance-test</id>-->
                        <!--<phase>integration-test</phase>-->
                        <!--<goals>-->
                            <!--<goal>test</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<forkCount>${surefire.fork.count}</forkCount>-->
                            <!--<reuseForks>false</reuseForks>-->
                            <!--<argLine>-Duser.language=en</argLine>-->
                            <!--<argLine>-Xmx1024m</argLine>-->
                            <!--<argLine>-XX:MaxPermSize=256m</argLine>-->
                            <!--<argLine>-Dfile.encoding=UTF-8</argLine>-->
                            <!--<useFile>false</useFile>-->
                            <!--<includes>-->
                                <!--<include>**/*AT.class</include>-->
                            <!--</includes>-->
                            <!--<testFailureIgnore>true</testFailureIgnore>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                <!--</executions>-->
            </plugin>

            <!--<plugin>-->
                <!--<groupId>org.codehaus.mojo</groupId>-->
                <!--<artifactId>exec-maven-plugin</artifactId>-->
                <!--<version>1.2.1</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<phase>post-integration-test</phase>-->
                        <!--<goals>-->
                            <!--<goal>java</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
                <!--<configuration>-->
                    <!--<mainClass>automation.cucumber_tests.ReportMerger</mainClass>-->
                    <!--<arguments>-->
                        <!--<argument>target/cucumber-report/</argument>-->
                    <!--</arguments>-->
                <!--</configuration>-->
            <!--</plugin>-->

        </plugins>
    </build>
    <dependencies>


        <!--<dependency>-->
            <!--<groupId>junit</groupId>-->
            <!--<artifactId>junit</artifactId>-->
            <!--<version>4.11</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.aeonbits.owner</groupId>
            <artifactId>owner-java8</artifactId>
            <version>1.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-api</artifactId>
            <version>2.53.1</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.16.18</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>2.53.1</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-chrome-driver</artifactId>
            <version>2.53.1</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-support</artifactId>
            <version>2.53.1</version>
        </dependency>
        <!--<dependency>-->
            <!--<groupId>org.testng</groupId>-->
            <!--<artifactId>testng</artifactId>-->
            <!--<version>6.9.4</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-jvm-deps</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>ru.yandex.qatools.htmlelements</groupId>
            <artifactId>htmlelements-java</artifactId>
            <version>1.18</version>
        </dependency>
        <dependency>
            <groupId>io.javaslang</groupId>
            <artifactId>javaslang</artifactId>
            <version>2.0.6</version>
        </dependency>

    </dependencies>

</project>